<resources>
    <string name="app_name">Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chat</string>
    <string name="nav_header_subtitle">https://github.com/songquanpeng/chat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Chat</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>

    <string name="home_second">Home Second</string>
    <string name="input_hint">Type here</string>
    <string name="send">Send</string>
    <string name="help_content">Send image: \nlong press the send button.\n\nGithub address: \nhttps://github.com/songquanpeng/chat-room-android\n\nDisclaimer:\nOnly for study and research, please do not use for other purposes, otherwise you will be at your own risk!</string>
    <string name="server_label">Server Address</string>
    <string name="username_label">Username</string>
    <string name="save_setting_btn">Save</string>
    <string name="room_id_label">Room ID</string>
    <string name="room_id">Name</string>
    <string name="disconnect">Disconnected</string>
    <string name="connect">Connected</string>
    <string name="connect_error">Connect error, try restart this application!</string>
    <string name="conflict_username">Conflicted username</string>
    <string name="register_success">Register success</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_setting">Setting</string>
    <string name="dialog_require_username">Register a new username</string>
    <string name="dialog_btn_confirm_text">OK</string>
</resources>
