<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="71dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:text="@string/server_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/serverEditText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="" />

    <EditText
        android:id="@+id/serverEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/serverEditText" />

    <Button
        android:id="@+id/save_setting_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save_setting_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Save" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/room_id_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/roomIDEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/roomIDEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>